--- a/files/index.html
+++ b/files/index.html
@@ -76,9 +76,9 @@
         </div>
     </section>
     <!--Section4-->
-    <h1 class="symptoms-gap">Symptoms</h1>
+    <h1 class="symptoms-gap"></h1>
     <section class="section4">
-        <img src="images/Symptoms.jpg" class="symptom-img">
+        <img src="images/symptom.png" class="symptom-img">
     </section>
 
     <!--Section5-->
