--- a/files/ration.html
+++ b/files/ration.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="./ration.css">
   <link rel="stylesheet" href="./header.css">
   <title>Document</title>
-  <script src="https://kit.fontawesome.com/f76d7a14b0.js" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
 </head>
 
@@ -29,27 +28,26 @@
     <div class="heading">
       <h1>RATION CALCULATOR</h1>
     </div>
-    <!-- FONT AWESOME -->
+    
     <div class="inputs">
       <div class="input1">
-        <i class="fas fa-male fa-3x"></i>
+        
         <div class="box">
-          <h3>Members in family</h3>
+          <h3>Members</h3>
         </div>
         <input type="number" id="members" name="members">
       </div>
       <div class="input1">
-        <i class="fas fa-stopwatch fa-3x"></i>
         <div class="box">
-          <h3>Duration (in days)</h3>
+          <h3>Period</h3>
         </div>
         <input type="number" id="duration" name="duration">
       </div>
     </div>
     <div class="qty">
-      <div class="box entqty">
-        <h3 class="enterqty">Enter Quantity</h3>
-      </div>
+        <div class="box space">
+          <h3>Ration available</h3>
+        </div> 
       <div class="items">
         <div class="item1">
           <div class="box item">
